samples/_failures_safe/1761557594_3e80f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ad2c78e9.c: In function ‘read_token’:
./samples/SAFE/__tmp_ad2c78e9.c:151:9: error: expected expression at end of input
  151 |         token->value[
      |         ^~~~~
./samples/SAFE/__tmp_ad2c78e9.c:151:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ad2c78e9.c:151:9: error: expected declaration or statement at end of input
